# Discord-Emulator

./: .gitignore  .replit  LICENSE.md  README.md  Token.txt  data.json  main.py  pyproject.toml  requirements.txt
old/: .gitignore  requirements.txt
src/: main.py
src/tools/: __init__.py  client.py  menu.py  token.py  user.py
src/utils/: __index__.py  handlers.py  ui.py
